dockerfile-policy-1.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: detect-unauthenticated-flag
  annotations:
    policies.kyverno.io/title: Check for unauthenticated flag in Dockerfile
    policies.kyverno.io/category: Dockerfile Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: >-
      This policy ensures that Dockerfile do not contain the '--allow-unauthenticated' flag.
spec:
  rules:
    - name: detect-unauthenticated-flag
      match:
        any:
        - (Stages[].Commands[?Name=='RUN'].CmdLine[] | length(@) > `0`): true
      assert:
        any:
        - message: Dockerfile contains the '--allow-unauthenticated' which is not preferred
          check:
            ~.(Stages[].Commands[?Name=='RUN'].CmdLine[][]):
               (contains(@, '--allow-unauthenticated') && (contains(@, 'apt-get') || contains(@, 'apt'))): false
